webpack configuration, working on rendering frontend - bundle.js not found

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Orange Line</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <script defer src="main.js"></script>
+    <div id="app"></div>
+    <script type="text/javascript" async defer src="../bundle.js"></script>
   </body>
 </html>
